# hack-4-health-2026-mriah-carey

./: .gitattributes  .gitignore  README.md  main.py
.cursor/rules/: CODING_STANDARDS.mdc
api/: README_API.md  eval_results.json  linkage_report.json  main.py  pipeline.py  pyproject.toml  report.json  results.json  simplified.json  test_pipeline.py  testing.py
api/clients/: __init__.py  gemini.py  opensearch.py
api/evaluators/: __init__.py  base.py  concept.py  coverage.py  nli.py  ops.py  readability.py  semantic.py  simplification.py
api/models/: __init__.py  api_schema.py  evaluation.py  report_schema.py  simplified_schema.py  validation.py
api/parser/: __init__.py  base.py  llm_extractor.py  text_processor.py
api/scripts/: __init__.py  eval_dataset.py  load_umls_to_opensearch.py  query_umls.py  run_evals.py  test_evals.py
api/services/: __init__.py  chunker.py  comparison.py  compiler.py  concept_extractor.py  evaluation_service.py  glossary.py  linker.py  mlflow_service.py  simplifier.py  summarizer.py  umls_service.py  verifier.py
api/utils/: __init__.py  file_handler.py  nlp.py  pdf_parser.py
api/validators/: __init__.py  base.py  concept_safety.py  contradiction_nli.py  empty_chunk.py  evidence_span.py  numeric.py  orchestrator.py  recommendation_policy.py  umls_grounding.py
client/: package.json
client/src/: App.tsx  index.css  simplification_model.py
client/src/components/: Account.css  Account.tsx  CitedText.css  CitedText.tsx  DoctorView.css  DoctorView.tsx  FileUpload.css  FileUpload.tsx  Glossary.css  Glossary.tsx  HamburgerMenu.css  (+13 more)
(+2 files in other folders)
